actualización y mejora de los estilos y contenido de la página principal.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <aside class="aside-default">
         <h1>APRENDE DESARROLLO WEB</h1>
         <p class="normal">
-          Bienvenido a <strong>Code R11</strong>, tu mapa de aprendizaje
-          activo para dominar el diseño y desarrollo web. Un proyecto enfocado
+          Bienvenido a <strong>CODE R11</strong>, tu mapa de aprendizaje
+          activo para dominar el diseño y desarrollo web front-end. Un proyecto enfocado
           en el ecosistema y gran potencial de JavaScript como pilar
           fundamental para tu aprendizaje.
         </p>
@@ -42,11 +42,11 @@
             En la web, existe una increíble cantidad de material para tu
             aprendizaje. Mucha de esta información se encuentra disponible de
             manera gratuita en Internet, pero ¿Sabes dónde buscar? Es por ello
-            que el equipo de Code R11 se ha tomado la tarea de recopilar,
+            que el equipo de CODE R11 se ha tomado la tarea de recopilar,
             categorizar y organizar toda esta valiosa información.
           </p>
           <p>
-            Es por ello que Code R11 es tu centro de control para el
+            Es por ello que CODE R11 es tu centro de control para el
             aprendizaje activo para que desarrolles tus habilidades como
             programador con la mejor información oficial y todo de primera
             mano. Sabemos muy bien que con la práctica, la dedicación y estos
@@ -62,7 +62,7 @@
         <div class="block-text block-columns">
           <h2 class="block-columns-title">ENFÓCATE, PRACTICA Y AVANZA</h2>
           <p>
-            El proyecto Code R11, nace con el objetivo de mostrarte el camino
+            El proyecto CODE R11, nace con el objetivo de mostrarte el camino
             más corto que debes recorrer para reducir la curva de aprendizaje.
             Todo esto, mientras que adoptas buenas prácticas y enfocas tu
             aprendizaje a una ruta predeterminada. Es un mapa de aprendizaje
@@ -297,7 +297,7 @@
             APRENDIZAJE ACTIVO
           </h2>
           <p class="lead">
-            El proyecto Code R11, nace con el objetivo de mostrarte el camino
+            El proyecto CODE R11, nace con el objetivo de mostrarte el camino
             más corto que debes recorrer para reducir la curva de aprendizaje.</p>
           <p>Todo esto, mientras que adoptas buenas prácticas y enfocas tu
             aprendizaje a una ruta predeterminada.</p> 
@@ -308,7 +308,7 @@
             conocimiento de: HTML, CSS y JavaScript.
           </p>
           <p>
-            Es por ello que en Code R11 hemos organizado toda la información
+            Es por ello que en CODE R11 hemos organizado toda la información
             necesaria para tu aprendizaje activo. Y estamos orgullosos de que
             esta plataforma te sirva de guía para tu aprendizaje.
           </p>
