--- a/videos-categorias.html
+++ b/videos-categorias.html
@@ -24,7 +24,8 @@
             <li><a href="#">JavaScript</a></li>
             <li><a href="#">Git</a></li>
             <li><a href="#">NodeJS</a></li>
-            <li><a href="#">React</a></li>
+            <li><a href="#">React</a></li> 
+            <li><a href="#">NextJS</a></li>           
             <li><a href="#">TypeScript</a></li>
             <li><a href="#">Tools</a></li>
             <li><a href="#">BootCamp</a></li>
