actualización categoria: videos vercel

--- a/videos-categorias.html
+++ b/videos-categorias.html
@@ -25,7 +25,8 @@
             <li><a href="#">Git</a></li>
             <li><a href="#">NodeJS</a></li>
             <li><a href="#">React</a></li> 
-            <li><a href="#">NextJS</a></li>           
+            <li><a href="#">NextJS</a></li>  
+            <li><a href="#">Vercel</a></li>           
             <li><a href="#">TypeScript</a></li>
             <li><a href="#">Tools</a></li>
             <li><a href="#">BootCamp</a></li>
