actaulización de la categoría: documentación

--- a/documentacion.html
+++ b/documentacion.html
@@ -22,9 +22,9 @@
           />
           <h1>Documentacion</h1>
           <p class="informativo">
-            Información técnica para una comprensión profunda de las
-            especificaciones y referencias más relevantes para un desarrollador
-            web.
+            Información técnica y cursos para una comprensión profunda de las
+            especificaciones y referencias más relevantes para los desarrolladores
+            web. 
           </p>
         </aside>
 
