mejoras para automatizar el orden de vista de la categoría sitios web

--- a/w3c.html
+++ b/w3c.html
@@ -28,7 +28,7 @@
             <a href="sitios-web.html" class="migas"
               >>>Regresar a Sitios Web</a
             >
-            <div id="card-container" class="cards cursos-w3c 3"></div>
+            <div id="card-container" class="cards cursos-w3c"></div>
           </article>
 
           <article>
