--- a/w3schools.html
+++ b/w3schools.html
@@ -29,7 +29,7 @@
         <section class="section-default">
           <article>
             <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
-            <div id="card-container" class="cards cursos-w3schools 0"></div>
+            <div id="card-container" class="cards cursos-w3schools"></div>
           </article>
         </section>
       </main>
