--- a/web-dev.html
+++ b/web-dev.html
@@ -31,7 +31,7 @@
         <section class="section-default">
           <article>
             <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
-            <div id="card-container" class="cards cursos-web-dev 8"></div>
+            <div id="card-container" class="cards cursos-google"></div>
           </article>
         </section>
       </main>
