--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -29,7 +29,7 @@
         <section class="section-default">
           <article>
             <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
-            <div id="card-container" class="cards cursos-web-dev 10"></div>
+            <div id="card-container" class="cards cursos-freecodecamp"></div>
           </article>
         </section>
       </main>
