--- a/mdn.html
+++ b/mdn.html
@@ -26,7 +26,7 @@
             <section class="section-default">
                 <article>
                     <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
-                    <div id="card-container" class="cards cursos-mdn 1">
+                    <div id="card-container" class="cards cursos-mdn">
                     </div>
                 </article>
             </section>
