--- a/microsoft.html
+++ b/microsoft.html
@@ -30,7 +30,7 @@
         <section class="section-default">
           <article>
             <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
-            <div id="card-container" class="cards cursos-microsoft 2"></div>
+            <div id="card-container" class="cards cursos-microsoft"></div>
           </article>
         </section>
       </main>
