--- a/sitios-web.html
+++ b/sitios-web.html
@@ -31,9 +31,9 @@
         </main>
         <footer id="footer-section1"></footer>
     </div>
-    <script src="../app/menu.js"></script>
-    <script src="../app/dataBase/dbRutas.js"></script>
-    <script src="../app/mostrar-por-grupo.js"></script>
+    <script src="/app/menu.js"></script>
+    <script src="/app/dataBase/dbRutas.js"></script>
+    <script src="/app/mostrar-por-grupo.js"></script>
 </body>
 
 </html>
