creación mapa del sitio y actualización del proyecto

--- a/libros.html
+++ b/libros.html
@@ -36,7 +36,10 @@
 
       <footer id="footer-section1"></footer>
     </div>
-    <script src="../app/menu.js"></script>
-    <script src="../app/dataBase/dbLibros.js"></script>
+    <script src="/app/menu.js"></script>
+    <!-- <script src="/app/dataBase/dbLibros.js"></script> -->
+    <script src="/app/mostrar-libros.js" type="module"></script>
+    
+
   </body>
 </html>
