--- a/videos-categorias.html
+++ b/videos-categorias.html
@@ -17,28 +17,13 @@
     <main>
       <section>
         <nav class="videos">
-          <ul id="lista">
-            <li><a href="#">Todos</a></li>
-            <li><a href="#">HTML</a></li>
-            <li><a href="#">CSS</a></li>
-            <li><a href="#">JavaScript</a></li>
-            <li><a href="#">Git</a></li>
-            <li><a href="#">NodeJS</a></li>
-            <li><a href="#">React</a></li> 
-            <li><a href="#">NextJS</a></li>  
-            <li><a href="#">Vercel</a></li>           
-            <li><a href="#">TypeScript</a></li>
-            <li><a href="#">Tools</a></li>
-            <li><a href="#">BootCamp</a></li>
-            <li><a href="#">Proyectos</a></li>
-            <li><a href="#">Portafolio</a></li>
-            <li><a href="#">Trabajos</a></li>
-            <li><a href="#">Desarrollo Web</a></li>
-          </ul>
+          <ul id="lista"></ul>
         </nav>
-        <h1>Todos los videos</h1>
-        <a href="videos.html" class="migas">>>Regresar a Videos-Tutoriales</a>
-        <div id="videoItem" class="contenedor-videos"></div>
+        <h1>Videos Tutoriales</h1>
+        <a href="index.html" class="migas">>>Regresar a Categorías</a>
+        <div id="menu-section"></div>
+        <div id="grupos"></div>
+        
       </section>
     </main>
 
@@ -53,8 +38,8 @@
   </div>
 
   <script src="/app/menu.js"></script>
-  <script src="/app/dataBase/dbVideos.js"></script>
-  <script src="/app/delegar-eventos-videos.js"></script>
+
+  <script src="/app/delegar-eventos-videos.js" type="module"></script>
   <!--  <script src="/app/mostrar-videos.js"></script> -->
   <script src="/app/script-videos.js"></script>
 </body>
