--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cursos freecodecamp</title>
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/cards.css" />
-  </head>
 
-  <body id="sitios-web" class="inicio">
-    <div id="root">
-      <header id="menuAppHeader" class="header"></header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cursos freecodecamp</title>
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/cards.css" />
+</head>
 
-      <main class="container">
-        <aside class="aside-default">
-          <img
-            class="img-50"
-            src="/public/images/sitios-web/freecodecamp.jpg"
-            alt="freecodecamp"
-          />
-          <h1>FreeCodeCamp</h1>
-          <p>
-            FreeCodeCamp.org ayuda a las personas a aprender a programar de forma gratuita. En su página vas a encontrar miles de videos, artículos y lecciones de programación interactivas, todos disponibles de manera gratuita.
-          </p>
-        </aside>
+<body id="sitios-web" class="inicio">
+  <div id="root">
+    <header id="menuAppHeader" class="header"></header>
 
-        <section class="section-default">
-          <article>
-            <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
-            <div id="card-container" class="cards cursos-freecodecamp"></div>
-          </article>
-        </section>
-      </main>
+    <main class="container">
+      <aside class="aside-default">
+        <img class="img-50" src="/public/images/sitios-web/freecodecamp.jpg" alt="freecodecamp" />
+        <h1>FreeCodeCamp</h1>
+        <p>
+          FreeCodeCamp.org ayuda a las personas a aprender a programar de forma gratuita. En su página vas a encontrar
+          miles de videos, artículos y lecciones de programación interactivas, todos disponibles de manera gratuita.
+        </p>
+      </aside>
 
-      <footer id="footer-section1"></footer>
-    </div>
-    <script src="/app/menu.js"></script>
-    <script src="/app/dataBase/dbRutas.js"></script>
-    <script src="/app/mostrar-por-grupo.js"></script>
-  </body>
+      <section class="section-default">
+        <article>
+          <a href="sitios-web.html" class="migas">>>Regresar a Sitios Web</a>
+          <div id="card-container" class="cards cursos-freecodecamp"></div>
+        </article>
+      </section>
+    </main>
+
+    <footer id="footer-section1"></footer>
+  </div>
+  <script src="/app/menu.js"></script>
+  <script src="/app/mostrar-por-grupo.js" type="module"></script>
+</body>
+
 </html>
