--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
     <footer id="footer-section1"></footer>
   </div>
   <script src="/app/menu.js"></script>
-  <script src="/app/dataBase/dbRutas.js"></script>
-  <script src="/app/categorias.js"></script>
+  <!-- <script src="/app/dataBase/dbRutas.js"></script> -->
+  <script src="/app/categorias.js" type="module"></script>
 </body>
 
 </html>
