--- a/sand-box.html
+++ b/sand-box.html
@@ -30,8 +30,7 @@
         <footer id="footer-section1"></footer>
     </div>
     <script src="/app/menu.js"></script>
-    <script src="/app/dataBase/dbRutas.js"></script>
-    <script src="/app/mostrar-por-grupo.js"></script>
+    <script src="/app/mostrar-por-grupo.js" type="module"></script>
 </body>
 
 </html>
