--- a/trabajos-remotos.html
+++ b/trabajos-remotos.html
@@ -34,7 +34,6 @@
     </div>
     
     <script src="/app/menu.js"></script>
-    <script src="/app/dataBase/dbRutas.js"></script>
-    <script src="/app/mostrar-por-grupo.js"></script>
+    <script src="/app/mostrar-por-grupo.js" type="module"></script>
   </body>
 </html>
