--- a/sitemap.html
+++ b/sitemap.html
@@ -19,8 +19,8 @@
             <nav>
                 <ul id="menu">
                     <li><a href="#">Mapa del Sitio</a></li>
-                    <li><a href="#">Directorio</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <!-- <li><a href="#">Directorio</a></li>
+                    <li><a href="#">Blog</a></li> -->
                 </ul>
             </nav>
         </div>
