mejoras al estilo del menu para la selección de las categorías de los videos

--- a/videos-categorias.html
+++ b/videos-categorias.html
@@ -17,7 +17,7 @@
     <main>
       <section>
         <nav class="videos">
-          <ul id="lista"></ul>
+          <ul id="idMenuVideos" class="menuVideos">
         </nav>
         <h1>Videos Tutoriales</h1>
         <a href="index.html" class="migas">>>Regresar a Categorías</a>
