--- a/videos-portafolios.html
+++ b/videos-portafolios.html
@@ -35,8 +35,7 @@
     </div>
 
     <script src="/app/menu.js"></script>
-    <script src="/app/dataBase/dbVideos.js"></script>
-    <script src="/app/mostrar-videos.js"></script>
+    <script src="/app/mostrar-videos.js" type="module"></script>
     <script src="/app/script-videos.js"></script>
   </body>
 </html>
