--- a/videos-trabajos.html
+++ b/videos-trabajos.html
@@ -34,8 +34,8 @@
     </div>
 
     <script src="/app/menu.js"></script>
-    <script src="/app/dataBase/dbVideos.js"></script>
-    <script src="/app/mostrar-videos.js"></script>
+    <!-- <script src="/app/dataBase/dbVideos.js"></script> -->
+    <script src="/app/mostrar-videos.js" type="module"></script>
     <script src="/app/script-videos.js"></script>
   </body>
 </html>
