actualización del contenido para VS Code y los cursos de Inglés ya que el contenido no se estaba mostrando

--- a/ingles-cursos.html
+++ b/ingles-cursos.html
@@ -1,50 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sitios Web y Apps para Aprender Inglés</title>
-    <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/cards.css" />
-  </head>
 
-  <body id="herramientas" class="inicio">
-    <div id="root">
-      <header id="menuAppHeader" class="header"></header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sitios Web y Apps para Aprender Inglés</title>
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/cards.css" />
+</head>
 
-      <main class="container">
-        <aside class="aside-default">
-          <img
-            class="img-50"
-            src="../public/images/app/ingles-app.jpg"
-            alt="Cursos para Aprender Inglés en línea"
-          />
-          <h1>Plataformas y APP para aprender Inglés</h1>
-          <p>
-            El inglés es muy importante, no solo por ser el idioma más hablado
-            en el mundo, sino porque la iniciación en el desarrollo de
-            tecnologías informáticas y computación por lo general provienen de
-            países de donde el idioma dominante es el inglés. Además, el
-            vocabulario técnico en el área de informática es en su mayoría
-            inglés, por esto la importancia del idioma en esta área.
-          </p>
-        </aside>
+<body id="herramientas" class="inicio">
+  <div id="root">
+    <header id="menuAppHeader" class="header"></header>
 
-        <section class="section-default">
-          <article>
-            <a href="herramientas.html" class="migas"
-              >>>Regresar a Herramientas</a
-            >
-            <div id="card-container-ingles" class="cards ingles-cursos 0"></div>
-          </article>
-        </section>
-      </main>
+    <main class="container">
+      <aside class="aside-default">
+        <img class="img-50" src="../public/images/app/ingles-app.jpg" alt="Cursos para Aprender Inglés en línea" />
+        <h1>Plataformas y APP para aprender Inglés</h1>
+        <p>
+          El inglés es muy importante, no solo por ser el idioma más hablado
+          en el mundo, sino porque la iniciación en el desarrollo de
+          tecnologías informáticas y computación por lo general provienen de
+          países de donde el idioma dominante es el inglés. Además, el
+          vocabulario técnico en el área de informática es en su mayoría
+          inglés, por esto la importancia del idioma en esta área.
+        </p>
+      </aside>
 
-      <footer id="footer-section1"></footer>
-    </div>
-    <script src="/app/menu.js"></script>
+      <section class="section-default">
+        <article>
+          <a href="herramientas.html" class="migas">>>Regresar a Herramientas</a>
+          <div id="card-container-ingles" class="cards ingles-cursos 0"></div>
+        </article>
+      </section>
+    </main>
+
+    <footer id="footer-section1"></footer>
+  </div>
+  <script src="/app/menu.js"></script>
+  <script src="/app/mostrar-por-grupo.js" type="module"></script>
+  <!-- <script src="/app/menu.js"></script>
     <script src="/app/dataBase/dbRutas.js"></script>
-    <script src="/app/mostrar-por-grupo.js"></script>
-  </body>
+    <script src="/app/mostrar-por-grupo.js"></script> -->
+</body>
+
 </html>
