Mejoras al texto en la página proyecto code r11

--- a/proyecto-code-r11.html
+++ b/proyecto-code-r11.html
@@ -24,10 +24,72 @@
           <h2>APRENDIZAJE ACTIVO</h2>
           <p>
             Bienvenidos a <strong style="color: black">Code R11</strong>, tu
-            ruta de aprendizaje activo para dominar el diseño y desarrollo
-            web. Un proyecto centrado en el ecosistema de JavaScript como
-            pilar fundamental para tu aprendizaje.
+            mapa para dominar el diseño y desarrollo
+            web frontend desde cero. Un proyecto centrado en el ecosistema de JavaScript como
+            pilar fundamental para tu aprendizaje activo.
           </p>
+          <p>
+            Creado por <strong style="color: black">Juan Martinez</strong> y su hija <strong style="color: black">María
+              Gabriela Martinez</strong> en el año 2022 como un sitio para recopilar en un solo lugar los enlaces relevantes del aprendizaje del desarrollo web a nivel frontend. Lo llamaron con cariño R11 para establecer y organizar el proyecto en 11 categorías principales. De esta manera, podían acceder, recorrer y definir su propia ruta de aprendizaje de acuerdo a cada categoría:
+          </p>
+          <br>
+          <ol class="lista-categorias">
+            <li>
+              <a href="sitios-web.html">
+                Sitios web con cursos online
+              </a>
+            </li>
+            <li>
+              <a href="documentacion.html">
+                Documentación Oficial
+              </a>
+            </li>
+            <li>
+              <a href="libros.html">
+                Libros y Gúias
+              </a>
+            </li>
+            <li>
+              <a href="herramientas.html">
+                Herramientas
+              </a>
+            </li>
+            <li>
+              <a href="sand-box.html">
+                Sand-box
+              </a>
+            </li>
+            <li>
+              <a href="boot-camp.html">
+                Coding Bootcamp
+              </a>
+            </li>
+            <li>
+              <a href="mentores.html">
+                Gúia de Expertos y Mentores
+              </a>
+            </li>
+            <li>
+              <a href="videos-categorias.html">
+                Videos tutoriales en Youtube
+              </a>
+            </li>
+            <li>
+              <a href="hosting.html">
+                Hosting
+              </a>
+            </li>
+            <li>
+              <a href="portafolio.html">
+                Portafolio
+              </a>
+            </li>
+            <li>
+              <a href="trabajos-remotos.html">
+                Proyectos y trabajos remotos
+              </a>
+            </li>
+          </ol>
 
         </div>
       </article>
@@ -75,7 +137,10 @@
 
           <p>Así que, enfócate, practica y avanza con CODE R11.</p>
         </div>
-        <h2>¿DÓNDE APRENDER DESARROLLO WEB?</h2>
+        <br>
+        <hr>
+        <br>
+        <h2>Aquí vas encontrar la base para tu aprendizaje activo</h2>
         <div style="
                 padding: 10px;
                 margin: 10px auto;
@@ -136,6 +201,9 @@
             de completar tu ciclo de aprendizaje, con una ruta que te guie
             hasta lo mejor del desarrollo backend y todo su gran potencial.
           </p>
+          <br>
+
+          <br>
           <h2>
             LA INFORMACIÓN ES PODER, APROVECHA TODO ESTE MATERIAL A TU FAVOR
           </h2>
