actualización del proyecto

--- a/proyecto-code-r11.html
+++ b/proyecto-code-r11.html
@@ -30,7 +30,9 @@
           </p>
           <p>
             Creado por <strong style="color: black">Juan Martinez</strong> y su hija <strong style="color: black">María
-              Gabriela Martinez</strong> en el año 2022 como un sitio para recopilar en un solo lugar los enlaces relevantes del aprendizaje del desarrollo web a nivel frontend. Lo llamaron con cariño R11 para establecer y organizar el proyecto en 11 categorías principales. De esta manera, podían acceder, recorrer y definir su propia ruta de aprendizaje de acuerdo a cada categoría:
+              Gabriela Martinez</strong> en el año 2022 como un sitio para recopilar en un solo lugar los enlaces
+            relevantes del aprendizaje del desarrollo web a nivel frontend. Lo nombraron con cariño, <b>código R11</b> y
+            la idea era establecer y organizar este proyecto en <strong>11 categorías principales:</strong>.
           </p>
           <br>
           <ol class="lista-categorias">
@@ -90,6 +92,12 @@
               </a>
             </li>
           </ol>
+          <p>
+            Hoy en día, tu también tienes acceso gratuito a toda esta información. Además, <b>te vas a ahorrar ciento de
+              horas de investigación</b> y simplemente acceder al tema o categoría que te interesa. De esta manera,
+            al igual que sus creadores podrás recorrer y definir tu propia ruta de aprendizaje de acuerdo a cada
+            categoría para el desarrollo web frontend.
+          </p>
 
         </div>
       </article>
@@ -99,43 +107,38 @@
         <div class="block-columns">
           <h3>Objetivo</h3>
           <p>
-            El proyecto Code R11, nace con el objetivo de mostrarte el
-            camino más corto que debes recorrer para reducir la curva de
-            aprendizaje. Todo esto, mientras que adoptas buenas prácticas y
-            enfocas tu aprendizaje a una ruta predeterminada. Es un mapa de
-            aprendizaje para desarrolladores web. </p>
-          <p> Donde te ofrecemos una
-            ruta estructurada y bien definida de los lenguajes, herramientas
-            y tecnologías que debes usar en cada paso. Nuestra meta es
-            lograr que te conviertas en un
+            El proyecto Code R11 es <b>un mapa de aprendizaje para los desarrolladores web a nivel frontend</b>. Nace con el objetivo de
+            mostrarte el camino más corto que debes recorrer para reducir la curva de aprendizaje. Todo esto, mientras
+            que adoptas buenas prácticas y enfocas tu aprendizaje a una ruta predeterminada.
+          </p>
+          <p>
+            Este sitio te ofrece una ruta estructurada y bien definida de los lenguajes, herramientas y tecnologías que debes usar en cada paso. Nuestra meta es lograr que te conviertas en un
             <strong style="color: black">desarrollador web profesional</strong>
             en el menor tiempo posible.
           </p>
 
-
           <h3>Misión</h3>
           <p>
-            Nuestra misión es que todo nuevo programador se construya una base
+            Nuestra misión es que cada nuevo programador se construya una base
             sólida con los tres pilares básicos del desarrollo web moderno:
-            HTML, CSS y JavaScript.
+            <b>HTML, CSS y JavaScript</b>.
           </p>
           <p>
             Es por ello que en Code R11 hemos organizado en 11 categorías toda
             la información necesaria para tu aprendizaje activo. Además,
-            estamos orgullosos de que esta plataforma te sirva como guía para
-            tu aprendizaje.
+            estamos orgullosos y nos llena de satisfacción de que esta plataforma te sirva como guía para tu aprendizaje.
           </p>
 
           <h3>Visión</h3>
           <p>
             Nuestra visión es hacer que el aprendizaje web en Latinoamérica se
-            convierta en un proceso divertido, desafiante y más colaborativo.
-            Donde los jóvenes tengan acceso a este conocimiento digital,
+            convierta en un proceso fluido, divertido, desafiante y más colaborativo.
+            Donde los jóvenes tengan acceso a este conocimiento digital de manera temprana, y
             puedan aprender desde la fuente principal y se incorporen como
-            profesionales en el desarrollo web al mercado laboral.
+            profesionales en el desarrollo web al mercado laboral. Incluso, gestionen y moneticen sus propios emprendimientos.
           </p>
 
-          <p>Así que, enfócate, practica y avanza con CODE R11.</p>
+          <p>Así que, <b>enfócate, practica y avanza</b> con CODE R11.</p>
         </div>
         <br>
         <hr>
