--- a/proyecto-code-r11.html
+++ b/proyecto-code-r11.html
@@ -93,9 +93,9 @@
             </li>
           </ol>
           <p>
-            Hoy en día, tu también tienes acceso gratuito a toda esta información. Además, <b>te vas a ahorrar ciento de
-              horas de investigación</b> y simplemente acceder al tema o categoría que te interesa. De esta manera,
-            al igual que sus creadores podrás recorrer y definir tu propia ruta de aprendizaje de acuerdo a cada
+            Hoy en día, tienes acceso gratuito a toda esta información. Además, <b>te vas a ahorrar ciento de
+              horas de investigación.</b>. Solotienes que acceder al tema o categoría que te interesa y listo. De esta manera,
+            al igual que sus creadores, podrás recorrer y definir tu propia ruta de aprendizaje de acuerdo a cada
             categoría para el desarrollo web frontend.
           </p>
 
@@ -107,12 +107,14 @@
         <div class="block-columns">
           <h3>Objetivo</h3>
           <p>
-            El proyecto Code R11 es <b>un mapa de aprendizaje para los desarrolladores web a nivel frontend</b>. Nace con el objetivo de
+            El proyecto Code R11 es <b>un mapa de aprendizaje para los desarrolladores web a nivel frontend</b>. Nace
+            con el objetivo de
             mostrarte el camino más corto que debes recorrer para reducir la curva de aprendizaje. Todo esto, mientras
             que adoptas buenas prácticas y enfocas tu aprendizaje a una ruta predeterminada.
           </p>
           <p>
-            Este sitio te ofrece una ruta estructurada y bien definida de los lenguajes, herramientas y tecnologías que debes usar en cada paso. Nuestra meta es lograr que te conviertas en un
+            Este sitio te ofrece una ruta estructurada y bien definida de los lenguajes, herramientas y tecnologías que
+            debes usar en cada paso. Nuestra meta es lograr que te conviertas en un
             <strong style="color: black">desarrollador web profesional</strong>
             en el menor tiempo posible.
           </p>
@@ -126,7 +128,8 @@
           <p>
             Es por ello que en Code R11 hemos organizado en 11 categorías toda
             la información necesaria para tu aprendizaje activo. Además,
-            estamos orgullosos y nos llena de satisfacción de que esta plataforma te sirva como guía para tu aprendizaje.
+            estamos orgullosos y nos llena de satisfacción de que esta plataforma te sirva como guía para tu
+            aprendizaje.
           </p>
 
           <h3>Visión</h3>
@@ -135,7 +138,8 @@
             convierta en un proceso fluido, divertido, desafiante y más colaborativo.
             Donde los jóvenes tengan acceso a este conocimiento digital de manera temprana, y
             puedan aprender desde la fuente principal y se incorporen como
-            profesionales en el desarrollo web al mercado laboral. Incluso, gestionen y moneticen sus propios emprendimientos.
+            profesionales en el desarrollo web al mercado laboral. Incluso, gestionen y moneticen sus propios
+            emprendimientos.
           </p>
 
           <p>Así que, <b>enfócate, practica y avanza</b> con CODE R11.</p>
