actualización del proyecto

--- a/proyecto-code-r11.html
+++ b/proyecto-code-r11.html
@@ -21,85 +21,118 @@
         </div>
         <div class="block-text">
           <h1 style="font-size: 50px">PROYECTO CODE R11</h1>
-          <h2>APRENDIZAJE ACTIVO</h2>
+          <h2>
+            LA INFORMACIÓN ES PODER, APROVECHA TODO ESTE MATERIAL A TU FAVOR
+          </h2>
           <p>
-            Bienvenidos a <strong style="color: black">Code R11</strong>, tu
-            mapa para dominar el diseño y desarrollo
-            web frontend desde cero. Un proyecto centrado en el ecosistema de JavaScript como
-            pilar fundamental para tu aprendizaje activo.
+            El mundo digital ha evolucionado y nunca fue tan fácil aprender a
+            programar, desarrollar aplicaciones y sitios web. Y todo esto se
+            debe al valioso contenido que se encuentra disponible de manera
+            pública en la Internet. Claro está, esto es posible gracias a una
+            gran comunidad de desarrolladores y las diversas empresas
+            tecnológicas que comparten sus cursos y documentación sobre el
+            diseño y desarrollo web. De tal manera, que es posible aprender
+            directamente de la fuente oficial con información de primera mano.
           </p>
           <p>
-            Creado por <strong style="color: black">Juan Martinez</strong> y su hija <strong style="color: black">María
-              Gabriela Martinez</strong> en el año 2022 como un sitio para recopilar en un solo lugar los enlaces
-            relevantes del aprendizaje del desarrollo web a nivel frontend. Lo nombraron con cariño, <b>código R11</b> y
-            la idea era establecer y organizar este proyecto en <strong>11 categorías principales:</strong>.
+            En CODE R11 nos esforzamos en actualizar este sitio con el mejor
+            material disponible para tu aprendizaje y el dominio del
+            desarrollo web.
           </p>
-          <br>
-          <ol class="lista-categorias">
-            <li>
-              <a href="sitios-web.html">
-                Sitios web con cursos online
-              </a>
-            </li>
-            <li>
-              <a href="documentacion.html">
-                Documentación Oficial
-              </a>
-            </li>
-            <li>
-              <a href="libros.html">
-                Libros y Gúias
-              </a>
-            </li>
-            <li>
-              <a href="herramientas.html">
-                Herramientas
-              </a>
-            </li>
-            <li>
-              <a href="sand-box.html">
-                Sand-box
-              </a>
-            </li>
-            <li>
-              <a href="boot-camp.html">
-                Coding Bootcamp
-              </a>
-            </li>
-            <li>
-              <a href="mentores.html">
-                Gúia de Expertos y Mentores
-              </a>
-            </li>
-            <li>
-              <a href="videos-categorias.html">
-                Videos tutoriales en Youtube
-              </a>
-            </li>
-            <li>
-              <a href="hosting.html">
-                Hosting
-              </a>
-            </li>
-            <li>
-              <a href="portafolio.html">
-                Portafolio
-              </a>
-            </li>
-            <li>
-              <a href="trabajos-remotos.html">
-                Proyectos y trabajos remotos
-              </a>
-            </li>
-          </ol>
-          <p>
-            Hoy en día, tienes acceso gratuito a toda esta información. Además, <b>te vas a ahorrar ciento de
-              horas de investigación.</b>. Solotienes que acceder al tema o categoría que te interesa y listo. De esta manera,
-            al igual que sus creadores, podrás recorrer y definir tu propia ruta de aprendizaje de acuerdo a cada
-            categoría para el desarrollo web frontend.
-          </p>
-
         </div>
+      </article>
+    </section>
+    <section class="section-blocks">
+      <article class="article-block-only-text centrar-texto">
+        <h2>APRENDIZAJE ACTIVO</h2>
+        <p>
+          Bienvenidos a <strong style="color: black">Code R11</strong>, tu
+          mapa para dominar el diseño y desarrollo
+          web frontend desde cero. Un proyecto centrado en el ecosistema de JavaScript como
+          pilar fundamental para tu aprendizaje activo.
+        </p>
+        <p>
+          Creado en el año 2022 por <strong style="color: black">Juan Martinez</strong> y su hija <strong
+            style="color: black">María
+            Gabriela Martinez</strong> como un sitio para recopilar en un solo lugar los enlaces
+          relevantes para el aprendizaje del desarrollo web a nivel frontend. Lo nombraron con cariño, <b>código
+            R11</b> y
+          la idea era establecer y organizar este proyecto en <strong>11 categorías principales:</strong>
+        </p>
+        <br>
+        <ol class="lista-categorias">
+          <li>
+            <a href="sitios-web.html">
+              Sitios web con cursos online
+            </a>
+          </li>
+          <li>
+            <a href="documentacion.html">
+              Documentación Oficial
+            </a>
+          </li>
+          <li>
+            <a href="libros.html">
+              Libros y Guías
+            </a>
+          </li>
+          <li>
+            <a href="herramientas.html">
+              Herramientas
+            </a>
+          </li>
+          <li>
+            <a href="sand-box.html">
+              Sand-box
+            </a>
+          </li>
+          <li>
+            <a href="boot-camp.html">
+              Coding Bootcamp
+            </a>
+          </li>
+          <li>
+            <a href="mentores.html">
+              Guía de Expertos y Mentores
+            </a>
+          </li>
+          <li>
+            <a href="videos-categorias.html">
+              Videos tutoriales en Youtube
+            </a>
+          </li>
+          <li>
+            <a href="hosting.html">
+              Hosting
+            </a>
+          </li>
+          <li>
+            <a href="portafolio.html">
+              Portafolio
+            </a>
+          </li>
+          <li>
+            <a href="trabajos-remotos.html">
+              Proyectos y trabajos remotos
+            </a>
+          </li>
+        </ol>
+        <p>
+          Ahora, tú también cuentas con acceso gratuito a toda esta base de datos del conocimiento en Code R11, la
+          cual
+          se nutre con la información que es accesible públicamente en Internet. Además, <b>te vas a ahorrar ciento de
+            horas de consultas e investigación</b> sobre donde puedes aprender desarrollo web frontend de manera
+          autodidacta en la web.</p>
+        <p>
+          Solo tienes que acceder en Code R11 al tema o categoría que te interesa y listo. De esta manera,
+          al igual que sus creadores, podrás recorrer y definir tu propia ruta de aprendizaje de acuerdo a cada
+          categoría para un estudio sistemático del desarrollo web frontend.
+        </p>
+        <p>
+          Por supuesto, este es un proyecto orgánico que pretende crecer y actualizarse con el tiempo. Y, sabemos que
+          en un futuro muy cercano, muchas más personas se sumaran y participaran en este proyecto Code R11 para
+          ayudar a otros con su aprendizaje inicial.
+        </p>
       </article>
     </section>
     <section class="section-blocks">
@@ -113,8 +146,8 @@
             que adoptas buenas prácticas y enfocas tu aprendizaje a una ruta predeterminada.
           </p>
           <p>
-            Este sitio te ofrece una ruta estructurada y bien definida de los lenguajes, herramientas y tecnologías que
-            debes usar en cada paso. Nuestra meta es lograr que te conviertas en un
+            Este sitio te ofrece un mapa detallado con los lenguajes, herramientas y tecnologías que
+            debes usar en cada paso. Nuestra meta es lograr que avances y te conviertas en un
             <strong style="color: black">desarrollador web profesional</strong>
             en el menor tiempo posible.
           </p>
@@ -195,48 +228,48 @@
           <p>Además, de construir aplicaciones y sitios web legibles
             y fáciles de usar para que el usuario pueda tener siempre una
             experiencia satisfactoria. En
-            <strong style="color: black">Code R11 te señala el camino</strong>
-            y la ruta de aprendizaje para potenciar estas habilidades.
+            <strong style="color: black">Code R11 obtienes un mapa detallado</strong>
+            y puedes establecer tu propia ruta de aprendizaje para potenciar estas habilidades según la estrategia que
+            definas.
           </p>
           <p>
-            De aquí la relevancia que tiene, dominar herramientas como Node.js
-            y librerías como React y ser capaz de crear interfaces de usuario
-            poderosas. Además, tendrás que implementar y desplegar tu proyecto
-            en la web.</p>
-          <p>Así que te recomendamos Next.js, un marco de desarrollo
-            profesional, dinámico y uno de los más completos. Y no te olvides
-            de completar tu ciclo de aprendizaje, con una ruta que te guie
-            hasta lo mejor del desarrollo backend y todo su gran potencial.
+            Al dominar la base con HTML, CSS y JavaScript, vas a continuar tu camino con el aprendizaje de herramientas
+            tales como, Node.js
+            y librerías como React. Con ellas serás capaz de crear interfaces de usuario todavía más
+            poderosas. En este nivel, será muy fácil para ti, implementar y desplegar tus proyectos en la web.</p>
+          <p>
+            Al completar tanto el <b>nivel básico con HTML, CSS y JavaScript</b>, como también el <b>nivel intermedio
+              con NodeJS y
+              React</b>. Entonces, vas a estar listo para llevar tu aprendizaje a un nivel profesional.
+          </p>
+          <p>
+            Y para completar tu aprendizaje de desarrollo web frontend el próximo paso será el <b>nivel experto con
+              Next.js</b>. Que corresponde a un marco de desarrollo
+            profesional, dinámico y uno de los más completos. Sin duda alguna, estos tres niveles deber ser <b>la ruta a
+              seguir en tu aprendizaje como desarrollador web frontend profesional</b>.
+          </p>
+          <p>
+            ¿Qué hay más allá del desarrollo web Frontend? El mundo de desarrollo es muy amplio y lleno de grandes retos
+            a nivel del desarrollo Backend. Esto en sí mismo, comprende un nuevo ciclo de aprendizaje con nuevos mapas y
+            nuevas rutas que podrás encontrar en nuestro próximo proyecto.
+          </p>
+          <p>
+            Entonces, podrás completar tu ciclo de aprendizaje, con una ruta que te guie hasta lo mejor del desarrollo
+            backend y todo su gran potencial. Es decir, el código y la configuración que existe del lado del servidor en
+            la web. Tal como, seguridad, bases de datos, control de registro y acceso de usuarios a la web.
           </p>
           <br>
 
           <br>
-          <h2>
-            LA INFORMACIÓN ES PODER, APROVECHA TODO ESTE MATERIAL A TU FAVOR
-          </h2>
-          <p>
-            El mundo digital ha evolucionado y nunca fue tan fácil aprender a
-            programar, desarrollar aplicaciones y sitios web. Y todo esto se
-            debe al valioso contenido que se encuentra disponible de manera
-            libre en la Internet. Claro está, esto es posible gracias a una
-            gran comunidad de desarrolladores y las diversas empresas
-            tecnológicas que comparten sus cursos y documentación sobre el
-            diseño y desarrollo web. De tal manera, que es posible aprender
-            directamente de la fuente oficial con información de primera mano.
-          </p>
-          <p>
-            En CODE R11 nos esforzamos en actualizar este sitio con el mejor
-            material disponible para tu aprendizaje y el dominio del
-            desarrollo web.
-          </p>
+
           <h2>UN FUTURO PROFESIONAL CON GRANDES POSIBILIDADES</h2>
           <p>
             El diseño, la programación y un mundo basado en la web parecen
-            intimidante cuando desconoces como funciona. La web es un mega
+            intimidantes cuando desconoces como funciona. La web es un mega
             universo digital que con mucha práctica sin dudas podrás entender
             y dominar. </p>
           <p>Cuando te enfocas y practicas, el diseño y desarrollo
-            web se vuelve divertido, emocionante y muy gratificante. Además,
+            web se vuelve cada vez más divertido, emocionante y muy gratificante. Es dicir, la clave es prácticar y prácticar. Además,
             este tipo de aprendizaje te va a permitir desarrollar habilidades
             increíbles, como lógica, abstracción y la capacidad para encontrar
             soluciones creativas para proyectos digitales diversos y
