--- a/ruta-coder11.html
+++ b/ruta-coder11.html
@@ -19,7 +19,7 @@
           <article class="rutas-items">
             <h2>Plan de Aprendizaje</h2>
             <h3>Code R11 2022-2023</h3>
-            <div class="precio">$</div>
+            <div class="precio">$ 20</div>
             <ul class="lista-flex">
               <li>Plan de Estudio Code R11</li>
               <li>Guía (Mejores Prácticas)</li>
@@ -36,7 +36,7 @@
           <article class="rutas-items">
             <h2>Aprende a tu Ritmo</h2>
             <h3>Simulador de Proyectos</h3>
-            <div class="precio">$</div>
+            <div class="precio">$ 60</div>
             <ul class="lista-flex">
               <li>Plan de Estudio Code R11</li>
               <li>Guía (Mejores Prácticas)</li>
@@ -53,7 +53,7 @@
           <article class="rutas-items">
             <h2>Aprende en Equipo</h2>
             <h3>Simulador de Proyectos</h3>
-            <div class="precio">$</div>
+            <div class="precio">$ 120</div>
             <ul class="lista-flex">
               <li>Plan de Estudio Code R11</li>
               <li>Guía (Mejores Prácticas)</li>
